tests/ui/borrowck/liberated-region-from-outer-closure.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/liberated-region-from-outer-closure.rs:5:17
   |
LL |         move || needs_static_lifetime(x);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 the parameter type `T` must be valid for the static lifetime...
   |                 ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL | fn example<T: Copy + 'static>(x: T) -> impl FnMut(&mut ()) {
   |                    +++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
